--- a/src/web/styles/gallery.css
+++ b/src/web/styles/gallery.css
@@ -34,3 +34,20 @@
   font-size: 2rem;
   margin-bottom: 0;
 }
+
+.image-user-input form {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+
+  box-shadow: 2px 2px 10px rgb(0, 0, 0);
+  border: 4px solid rgb(99, 99, 99);
+  border-radius: 5px;
+  margin: 10px;
+  padding: 5px;
+}
+
+.image-status-message {
+  color: rgb(255, 106, 0);
+  margin: 10px;
+}
