--- a/src/web/styles/gallery.css
+++ b/src/web/styles/gallery.css
@@ -20,7 +20,6 @@
   box-shadow: 2px 2px 10px rgb(0, 0, 0);
   border: 4px solid rgb(99, 99, 99);
   border-radius: 5px;
-  margin: 10px;
 }
 
 .popup-gallery img:hover {
@@ -28,11 +27,43 @@
   transform: scale(1.1);
 }
 
+.popup-image {
+  margin: 10px;
+}
+
+.popup-image p {
+  text-align: center;
+  margin: 0;
+  font-size: 20px;
+  font-weight: bold;
+}
+
 .gallery-content h2 {
   width: 100%;
   text-align: center;
   font-size: 2rem;
   margin-bottom: 0;
+}
+
+.page-selector {
+  text-align: center;
+}
+
+.page-selector span {
+  display: inline-block;
+  margin: 0 20px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.page-selector a {
+  display: inline-block;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+  background-color: rgb(201, 201, 255);
+  border-radius: 5px;
+  padding: 5px;
 }
 
 .image-user-input form {
