--- a/src/web/styles/style.css
+++ b/src/web/styles/style.css
@@ -68,3 +68,32 @@ p {
   border: solid black 1px;
   border-radius: 10px;
 }
+
+.account-info {
+  margin: 10px;
+}
+
+.account-info span {
+  color: white;
+  font-size: 25px;
+}
+
+.account-info form {
+  display: inline-block;
+  float: right;
+}
+
+.account-info form button {
+  font-size: 20px;
+  background-color: rgb(75, 75, 75);
+  border: 1px solid black;
+  color: white;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.account-info form button:hover {
+  transition-duration: 0.2s;
+  transform: scale(1.1);
+  cursor: pointer;
+}
