--- a/src/web/styles/style.css
+++ b/src/web/styles/style.css
@@ -83,6 +83,15 @@ p {
   float: right;
 }
 
+.not-loged {
+  text-align: right;
+}
+
+.not-loged form {
+  display: inline-block;
+  float: none;
+}
+
 .account-info form button {
   font-size: 20px;
   background-color: rgb(75, 75, 75);
